[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Title.gd" type="Script" id=1]

[node name="Title" type="Control"]
anchor_left = 0.5
anchor_right = 0.5
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -64.0
margin_top = 104.0
margin_right = 64.0
margin_bottom = 152.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = -64.0
margin_top = 760.0
margin_right = 64.0
margin_bottom = 906.0

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 128.0
margin_bottom = 20.0
text = "Start"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 128.0
margin_bottom = 44.0
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 128.0
margin_bottom = 68.0
text = "Quit"

[node name="Title" type="RichTextLabel" parent="."]
margin_left = -208.0
margin_top = 128.0
margin_right = 208.0
margin_bottom = 200.0
bbcode_enabled = true
bbcode_text = "[center]PLACEHOLDER TITLE: DUST DEVILS"
text = "PLACEHOLDER TITLE: DUST DEVILS"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
